--- a/appsettings.json
+++ b/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "MyDbConnection": "Server=(localdb)\\mssqllocaldb;Database=MyDatabaseContext-91316f4b-b40a-416d-b064-737120c19fd3;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MyDbConnection": "Server=tcp:cathydb.database.windows.net,1433;Initial Catalog=coreDB;Persist Security Info=False;User ID=administrator;Password=P@ssw0rd;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
